language/move-lang/tests/move_check/translated_ir_tests/commands/while_move_local.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/while_move_local.move:6:13 ───
   │
 6 │         y = move x;
   │             ^^^^^^ Invalid usage of local 'x'
   ·
 6 │         y = move x;
   │             ------ The local might not have a value due to this position. The local must be assigned a value before being used
   │

